Fixing pin spacing on phone and Desktop sizes.

--- a/css/pin.css
+++ b/css/pin.css
@@ -1,6 +1,11 @@
 @charset "utf-8";
 /* CSS Document */
 
+.pin-wrapper {
+	padding: 5px;
+    max-height: 400px;
+}
+
 .pin {
 	 background: #FEFEFE;
 	 border: 2px solid #FAFAFA;
@@ -25,4 +30,16 @@
 	font: 12px/18px Arial, sans-serif;
 	color: #333;
 	margin: 0;
+}
+
+@media screen and (min-width: 480px) {
+    .pin-wrapper {
+        max-height: 0;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .pin-wrapper {
+        max-height: 400px;
+        min-height: 375px;    }
 }
